# LearnOpenGL

./: .gitignore  CMakeLists.txt  glad.c
Include/: Camera.cpp  Camera.h  Config.h.in  Model.cpp  Model.h  Shader.cpp  Shader.h
Include/GLFW/: glfw3.h
Include/KHR/: khrplatform.h
Include/glad/: glad.h
Libs/: Shader.lib  glfw3.lib
Shader/: Simple.frag  Simple.vert
Shaders/: Box.frag  Box.vert  Lighting.frag  Lighting.vert  Simple.frag  Simple.vert  Texture.frag  Texture.vert
Source/: CMakeLists.txt  Hello3D.cpp  HelloShader.cpp  HelloTexture.cpp  HelloTriangle.cpp  HelloWindow.cpp  Renderer.cpp  Shaders.cpp
Source/1. Getting Started/: CMakeLists.txt  Hello3D.cpp  HelloShader.cpp  HelloTexture.cpp  HelloTriangle.cpp  HelloWindow.cpp
